# rules_img

./: .bazelignore  .bazelrc  .bazelrc.common  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  HACKING.md  MODULE.bazel  README.md  flake.nix  go.mod  go.sum  prebuilt_lockfile.json
.aspect/workflows/: config.yaml
.bcr/: config.yml  metadata.template.json  source.template.json
.bcr/img_tool/: metadata.template.json
.bcr/src/: presubmit.yml  source.template.json
.github/: release.yml
.github/workflows/: ci.bazelrc  ci.yml  publish.yaml  release.yaml  release_prep.sh  release_ruleset.yaml
benchmark/: .bazelrc  BUILD.bazel  MODULE.bazel  build_tree.bzl  toolchains_llvm.patch  toolchains_llvm_libc++.patch
benchmark/bzl/: platform_image.bzl
benchmark/examples/: BUILD.bazel  demo.sh
benchmark/examples/src/cc/: BUILD.bazel  foo.h  main.cc
bzl/img/: providers.bzl
cmd/: BUILD.bazel
cmd/bes/: BUILD.bazel  bes.go
cmd/compress/: BUILD.bazel  compress.go  flagtypes.go
cmd/downloadblob/: BUILD.bazel  downloadblob.go
cmd/expandtemplate/: BUILD.bazel  expandtemplate.go
cmd/img/: BUILD.bazel  img.go
cmd/index/: BUILD.bazel  flags.go  index.go
cmd/layer/: BUILD.bazel  flagtypes.go  layer.go  metadata.go  paramfile.go
cmd/layermeta/: BUILD.bazel  flagtypes.go  layermeta.go
cmd/load/: BUILD.bazel  load.go
cmd/manifest/: BUILD.bazel  flagtypes.go  manifest.go
cmd/ocilayout/: BUILD.bazel  copy_other.go  ocilayout.go
cmd/push/: BUILD.bazel  metadata.go  push.go
cmd/registry/: BUILD.bazel  registry.go
cmd/validate/: BUILD.bazel  validate.go
docs/: BUILD.bazel  image.md  layer.md  load.md  multi_deploy.md  pull.md  push-strategies.md  push.md  templating.md
e2e/: BUILD.bazel
e2e/cc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  cc_image.yaml  toolchain.MODULE.bazel
e2e/cc/base/: BUILD.bazel  manifest.yaml
e2e/cc/custom_standard_library/: BUILD.bazel  cc_image.yaml
e2e/cc/patches/: toolchains_llvm.patch
e2e/cc/platform/: BUILD.bazel
e2e/generic/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  annotated_manifest.yaml  complex_manifest.yaml  debian_slim_test.yaml  multi_layer_manifest.yaml  single_layer_manifest.yaml
e2e/generic/build_settings/: BUILD.bazel
e2e/generic/compression/: BUILD.bazel
e2e/generic/extend/: BUILD.bazel  defs.bzl  hello.txt
e2e/generic/load/: BUILD.bazel  hello.txt
e2e/generic/multi_deploy/: BUILD.bazel
e2e/generic/platform/: BUILD.bazel
e2e/go/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  main.go
e2e/go/cross/: BUILD.bazel
e2e/go/customization/: BUILD.bazel  go_image.yaml
e2e/go/image/: BUILD.bazel  go_image.yaml
e2e/go/multiarch/: BUILD.bazel
e2e/go/multiarch-manual/: BUILD.bazel  amd64_image.yaml  arm64_image.yaml
e2e/go/multiarch-transition/: BUILD.bazel  go_image.yaml
e2e/go/tools/: workspace_status.sh
e2e/js/: MODULE.bazel  package.json  pnpm-lock.yaml
e2e/js/app/: BUILD.bazel  main.js
e2e/python/: BUILD.bazel  MODULE.bazel  README.md  __main__.py  app.py  main.py
e2e/python/extract_python_files/: defs.bzl
e2e/python/image/: BUILD.bazel
e2e/python/multiarch-transition/: BUILD.bazel
e2e/python/platform/: BUILD.bazel
e2e/python/requirements/: requirements_lock.txt
e2e/simple/: MODULE.bazel
e2e/simple/go/: BUILD.bazel
e2e/workspace/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
examples/: BUILD.bazel  main.cc
img/: BUILD.bazel  dependencies.bzl  image.bzl  image_toolchain.bzl  layer.bzl  load.bzl  multi_deploy.bzl  providers.bzl  pull.bzl  push.bzl  repositories.bzl
img/constraints/: BUILD.bazel
img/private/: BUILD.bazel  download_blobs.bzl  file_metadata.bzl  image.bzl  image_toolchain.bzl  import.bzl  index.bzl  layer.bzl  layer_from_tar.bzl  load.bzl  manifest.bzl  multi_deploy.bzl  push.bzl  resolved_toolchain.bzl  root_symlinks.bzl  stamp.bzl  transitions.bzl  write_index_json.bzl
img/private/common/: BUILD.bazel  build.bzl  layer_helper.bzl  transitions.bzl  write_index_json.bzl
img/private/config/: BUILD.bazel  defs.bzl
img/private/devmode/: BUILD.bazel  devmode.go
img/private/devmode/ibazel/: .bazelrc  .bazelrc.common  MODULE.bazel
img/private/devmode/ibazel/ibazel/: BUILD.bazel
img/private/integration_test_runner/: BUILD.bazel  integration_test_runner.go
img/private/prebuilt/: BUILD.bazel  prebuilt.bzl
img/private/providers/: BUILD.bazel  deploy_info.bzl  image_toolchain_info.bzl  index_info.bzl  layer_info.bzl  load_settings_info.bzl  manifest_info.bzl  oci_layout_settings_info.bzl  pull_info.bzl  push_settings_info.bzl  stamp_setting_info.bzl
img/private/release/: BUILD.bazel  defs.bzl
img/private/release/bcr/: BUILD.bazel  bcr.go
img/private/release/distdir/: BUILD.bazel  distdir.go
img/private/release/gazelle_plugin/: BUILD.bazel  all_files.go  release_files_updated.bzl  test_wrapper.sh
img/private/release/gazelle_plugin/cmd/update_release_files/: BUILD.bazel  main.go
img/private/release/lockfile/: BUILD.bazel  lockfile.go
img/private/release/release_notes/: BUILD.bazel  release_notes.go
img/private/release/source_files/: BUILD.bazel
img/private/repository_rules/: BUILD.bazel  download.bzl  pull.bzl  pull_blob.bzl
img/private/settings/: BUILD.bazel  load.bzl  oci_layout.bzl  settings.bzl  stamp.bzl
img/settings/: BUILD.bazel
img/source_toolchain/: BUILD.bazel
img_tool/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod  go.sum
img_tool/toolchain/: BUILD.bazel
patches/: go-containerregistry-001-pkg-registry-export-RedirectError.patch  go-containerregistry-002-pkg-registry-export-ErrNotFound.patch  go-containerregistry-003-pkg-registry-add-callbacks-on-PUT-and-DELETE.patch  rules_python_command_v.patch
pkg/api/: BUILD.bazel  api.go  commands.go
pkg/cas/: BUILD.bazel  read.go  write.go
pkg/compress/: BUILD.bazel  compress.go  estargz.go  factory.go  ztoc.go  ztoc_test.go
pull_tool/: go.mod  go.sum
src/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  go_proto_library.bzl
testdata/: BUILD.bazel
tools/: BUILD.bazel  gopackagesdriver-nix.sh
util/: BUILD.bazel
(+417 files in other folders)
