exports_files(["MODULE.bazel"])

# gazelle:prefix github.com/tweag/rules_img

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "MODULE.bazel",
    ],
    visibility = ["//img/private/release:__subpackages__"],
)

filegroup(
    name = "tool_source_files",
    srcs = glob(
        ["src/**"],
        allow_empty = True,
    ),
    visibility = ["//img/private/release:__subpackages__"],
)

exports_files([
    ".bcr/metadata.template.json",
    "prebuilt_lockfile.json",
])
