exports_files(["MODULE.bazel"])

# gazelle:prefix github.com/bazel-contrib/rules_img

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "MODULE.bazel",
    ],
    visibility = ["//img/private/release:__subpackages__"],
)

filegroup(
    name = "tool_source_files",
    srcs = glob(
        ["img_tool/**"],
        allow_empty = True,
        exclude = [
            "img_tool/.bazelrc.common",
            "img_tool/.bazelrc",
            "img_tool/.vscode/**",
            "img_tool/tools/**",
        ],
    ),
    visibility = ["//img/private/release:__subpackages__"],
)

exports_files([
    ".bcr/metadata.template.json",
    "prebuilt_lockfile.json",
])
