bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_oci", version = "2.2.6", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.1.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
single_version_override(
    module_name = "toolchains_llvm",
    patch_strip = 1,
    patches = ["//:toolchains_llvm.patch", "//:toolchains_llvm_libc++.patch"],
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "cuda_rules_oci",
    digest = "sha256:f353ffca86e0cd93ab2470fe274ecf766519c24c37ed58cc2f91d915f7ebe53c",
    image = "index.docker.io/nvidia/cuda",
    platforms = ["linux/amd64"],
    tag = "12.8.1-cudnn-devel-ubuntu20.04",
)
oci.pull(
    name = "ubuntu_rules_oci",
    digest = "sha256:1e622c5f073b4f6bfad6632f2616c7f59ef256e96fe78bf6a595d1dc4376ac02",
    image = "index.docker.io/library/ubuntu",
    platforms = ["linux/amd64"],
    tag = "24.04",
)
use_repo(oci, "cuda_rules_oci", "cuda_rules_oci_linux_amd64", "ubuntu_rules_oci", "ubuntu_rules_oci_linux_amd64")

pull = use_repo_rule("@rules_img//bzl/img/private/repository_rules:pull.bzl", "pull")

pull(
    name = "ubuntu",
    digest = "sha256:1e622c5f073b4f6bfad6632f2616c7f59ef256e96fe78bf6a595d1dc4376ac02",
    registry = "index.docker.io",
    repository = "library/ubuntu",
    tag = "24.04",
)

pull(
    name = "cuda",
    digest = "sha256:f353ffca86e0cd93ab2470fe274ecf766519c24c37ed58cc2f91d915f7ebe53c",
    registry = "index.docker.io",
    repository = "nvidia/cuda",
    tag = "12.8.1-cudnn-devel-ubuntu20.04",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "test_archive",
    downloaded_file_path = "tweag-credential-helper-v0.0.5.tar.gz",
    integrity = "sha256-ekDKxcANT8AHddCNetpem3iI28vpBM8kT3ls/8kRzpw=",
    url = "https://github.com/tweag/credential-helper/releases/download/v0.0.5/tweag-credential-helper-v0.0.5.tar.gz",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    libclang_rt = {
        "@llvm_sysroot_linux_amd64//:usr/lib/llvm-19/lib/clang/19/lib/linux/libclang_rt.builtins-x86_64.a": "x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
        "@llvm_sysroot_linux_arm64//:usr/lib/llvm-19/lib/clang/19/lib/linux/libclang_rt.builtins-aarch64.a": "aarch64-unknown-linux-gnu/libclang_rt.builtins.a",
    },
    llvm_versions = {
        "linux-x86_64": "20.1.1",
        "linux-aarch64": "20.1.1",
    },
    sha256 = {"linux-x86_64": "58d7a1a8fa22a001794e82a8e9ca441e12fb6d62fd8b7d47040df58a459dec8e"},
    urls = {
        "linux-x86_64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1/linux_amd64.tar.xz"],
        "linux-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1/linux_arm64.tar.xz"],

    },
    stdlib = {
        "linux-aarch64": "libc++",
        "linux-x86_64": "libc++",
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@llvm_sysroot_linux_amd64//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@llvm_sysroot_linux_arm64//:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

sysroot_digest_amd64 = "a52519bee01417ceee8ef51f7e7bbd68b1d5868cdbd7ff0138a25b5306b28225"

http_archive(
    name = "llvm_sysroot_linux_amd64",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = sysroot_digest_amd64,
    type = "tzst",
    urls = ["https://ghcr.io/v2/malt3/sysroots/llvm/blobs/sha256:" + sysroot_digest_amd64],
)

sysroot_digest_arm64 = "7af34f88fa16ccc8194c0d0cfc2a42b7d6cd73187156a49baddd74677f5959b5"

http_archive(
    name = "llvm_sysroot_linux_arm64",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = sysroot_digest_arm64,
    type = "tzst",
    urls = ["https://ghcr.io/v2/malt3/sysroots/llvm/blobs/sha256:" + sysroot_digest_arm64],
)

