load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "image",
    bzl_library_target = "//img:image",
)

stardoc_with_diff_test(
    name = "layer",
    bzl_library_target = "//img:layer",
)

stardoc_with_diff_test(
    name = "push",
    bzl_library_target = "//img:push",
)

# Update all generated documentation
update_docs(name = "update")
