load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

# gazelle:exclude_from_release

stardoc_with_diff_test(
    name = "image",
    bzl_library_target = "//img:image",
)

stardoc_with_diff_test(
    name = "layer",
    bzl_library_target = "//img:layer",
)

stardoc_with_diff_test(
    name = "load",
    bzl_library_target = "//img:load",
)

stardoc_with_diff_test(
    name = "push",
    bzl_library_target = "//img:push",
)

stardoc_with_diff_test(
    name = "pull",
    bzl_library_target = "//img:pull",
)

stardoc_with_diff_test(
    name = "multi_deploy",
    bzl_library_target = "//img:multi_deploy",
)

# Update all generated documentation
update_docs(name = "update")
