load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_tests",
    "integration_test_utils",
)

# gazelle:exclude cc
# gazelle:exclude go
# gazelle:exclude generic
# gazelle:exclude load
# gazelle:exclude_from_release

TAGS = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS + ["requires-network"]

bazel_integration_tests(
    name = "go",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("go") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "go",
)

bazel_integration_tests(
    name = "cc",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    target_compatible_with = ["@platforms//os:linux"],
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("cc") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "cc",
)

bazel_integration_tests(
    name = "generic",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("generic") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "generic",
)

test_suite(
    name = "integration_tests",
    tags = TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "go",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "cc",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "generic",
        bazel_binaries.versions.all,
    ),
    visibility = ["//:__subpackages__"],
)
