load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_tests",
    "integration_test_utils",
)

# gazelle:exclude cc
# gazelle:exclude go
# gazelle:exclude generic
# gazelle:exclude js
# gazelle:exclude python
# gazelle:exclude workspace
# gazelle:exclude_from_release

TAGS = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS + ["requires-network"]

bazel_integration_tests(
    name = "go",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("go") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "go",
)

bazel_integration_tests(
    name = "cc",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    target_compatible_with = ["@platforms//os:linux"],
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("cc") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "cc",
)

bazel_integration_tests(
    name = "generic",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("generic") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "generic",
)

bazel_integration_tests(
    name = "js",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    target_compatible_with = select({
        # skip windows due to this issue in aspect_rules_js:
        # ERROR: D:/_bazel/execroot/_main/bazel-out/x64_windows-fastbuild/bin/e2e/js_bazel_7_4_0.exe.runfiles/_main/e2e/js.scratch/app/BUILD.bazel:14:15: Computing Layer Groups //app:layers failed: (Exit 1): node.exe failed: error executing JsImageLayerGroups command (from target //app:layers) external\rules_nodejs~~node~nodejs_windows_amd64\bin\nodejs\node.exe bazel-out/x64_windows-fastbuild/bin/app/layers_js_image_layer_splitter.mjs
        # node:internal/process/esm_loader:40
        #       internalBinding('errors').triggerUncaughtException(
        #                                 ^
        #
        # [Error: UNKNOWN: unknown error, readlink 'C:\users\runneradmin\appdata\local\temp\bit-578081517\l77zjc4j\execroot\_main\bazel-out\x64_windows-fastbuild-ST-576ef9824eaa\bin\node_modules\.aspect_rules_js\meaning-of-life@1.0.0\node_modules\meaning-of-life\index.js'] {
        #   errno: -4094,
        #   code: 'UNKNOWN',
        #   syscall: 'readlink',
        #   path: 'C:\\users\\runneradmin\\appdata\\local\\temp\\bit-578081517\\l77zjc4j\\execroot\\_main\\bazel-out\\x64_windows-fastbuild-ST-576ef9824eaa\\bin\\node_modules\\.aspect_rules_js\\meaning-of-life@1.0.0\\node_modules\\meaning-of-life\\index.js'
        # }
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("js") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "js",
)

bazel_integration_tests(
    name = "python",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    target_compatible_with = select({
        # skip windows due to this issue in aspect_rules_py:
        # ERROR: error loading package '@@aspect_rules_py~//py/tools/venv_bin': at C:/users/runneradmin/appdata/local/temp/bit-251164491/h6u2tfaj/external/aspect_rules_py~/tools/release/defs.bzl:5:6: Unable to find package for @@[unknown repo 'rules_rust' requested from @@aspect_rules_py~]//rust:defs.bzl: The repository '@@[unknown repo 'rules_rust' requested from @@aspect_rules_py~]' could not be resolved: No repository visible as '@rules_rust' from repository '@@aspect_rules_py~'.
        # ERROR: C:/users/runneradmin/appdata/local/temp/bit-251164491/h6u2tfaj/external/aspect_rules_py~/py/private/toolchain/venv/BUILD.bazel:3:17: error loading package '@@aspect_rules_py~//py/tools/venv_bin': at C:/users/runneradmin/appdata/local/temp/bit-251164491/h6u2tfaj/external/aspect_rules_py~/tools/release/defs.bzl:5:6: Unable to find package for @@[unknown repo 'rules_rust' requested from @@aspect_rules_py~]//rust:defs.bzl: The repository '@@[unknown repo 'rules_rust' requested from @@aspect_rules_py~]' could not be resolved: No repository visible as '@rules_rust' from repository '@@aspect_rules_py~'. and referenced by '@@aspect_rules_py~//py/private/toolchain/venv:venv_toolchain_source'
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("python") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "python",
)

bazel_integration_tests(
    name = "workspace",
    bazel_versions = bazel_binaries.versions.all,
    tags = TAGS,
    test_runner = "//img/private/integration_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("workspace") + [
        "//img/private/release/source_files:release_src_files",
    ],
    workspace_path = "workspace",
)

test_suite(
    name = "integration_tests",
    tags = TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "go",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "cc",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "generic",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "js",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "python",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "workspace",
        bazel_binaries.versions.all,
    ),
    visibility = ["//:__subpackages__"],
)
