load("//bzl/img/private:layer.bzl", "layer")

filegroup(
    name = "log",
    srcs = glob(["*.txt"]),
)

cc_shared_library(
    name = "foo_shared",
    deps = [":foo_lib"],
)

cc_library(
    name = "foo_lib",
    srcs = ["foo.cc"],
    hdrs = ["foo.h"],
)

cc_binary(
    name = "hello_cc",
    srcs = [
        "foo.h",
        "main.cc",
    ],
    dynamic_deps = ["foo_shared"],
)

layer(
    name = "my_layer",
    srcs = {
        "bin/img": "//cmd/img",
        "bin/hello_cc": ":hello_cc",
        "var/hello.txt": ":hello.txt",
        "var/log": ":log",
    },
)
