load("//bzl/img/private:image.bzl", "image")
load("//bzl/img/private:layer.bzl", "layer")
load("//bzl/img/private:push.bzl", "push")

filegroup(
    name = "log",
    srcs = glob(["*.txt"]),
)

layer(
    name = "my_layer",
    srcs = {
        "usr/bin/img": "//cmd/img",
        "var/hello.txt": ":hello.txt",
        "var/log": ":log",
    },
    symlinks = {
        "a": "b",
    },
)

image(
    name = "my_image",
    architecture = "amd64",
    base = "@ubuntu",
    layers = [
        ":my_layer",
    ],
    os = "linux",
)

image(
    name = "my_second_image",
    architecture = "amd64",
    os = "linux",
    base = "@cuda",
    layers = [
        ":my_layer",
    ],
)

push(
    name = "my_push",
    image = ":my_second_image",
    registry = "ghcr.io",
    repository = "malt3/ubuntu",
    tag = "latest",
)
