load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//img/private:resolved_toolchain.bzl", "resolved_toolchain")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//img/private/providers:index_info",
        "//img/private/providers:layer_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:pull_info",
    ],
)

bzl_library(
    name = "image",
    srcs = ["image.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//img/private:index",
        "//img/private:manifest",
    ],
)

bzl_library(
    name = "layer",
    srcs = ["layer.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//img/private:file_metadata",
        "//img/private:layer",
        "//img/private:layer_from_tar",
    ],
)

bzl_library(
    name = "push",
    srcs = ["push.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//img/private:push"],
)

bzl_library(
    name = "load",
    srcs = ["load.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//img/private:load"],
)

bzl_library(
    name = "pull",
    srcs = ["pull.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//img/private/repository_rules:pull"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)

bzl_library(
    name = "image_toolchain",
    srcs = ["image_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//img/private:image_toolchain"],
)
