load("@rules_img//img/private:image.bzl", "image")
load("@rules_img//img/private:index.bzl", "index")
load("@rules_img//img/private:layer.bzl", "layer")
load("@rules_img//img/private:layer_from_tar.bzl", "layer_from_tar")
load("@rules_img//img/private:push.bzl", "push")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("//:build_tree.bzl", "build_tree")

build_tree(
    name = "tree",
    size = 512,
    dirs = [
        "a/b/c",
        "x/y",
    ],
    names = [
        "foo",
        "bar",
        "a/b/c/leaf",
        "x/leaf",
    ],
)

build_tree(
    name = "large_tree",
    size = 512 * 128,
    names = ["large_file_%s" % i for i in range(256)],
)

filegroup(
    name = "log",
    srcs = glob(["*.txt"]),
)

oci_image(
    name = "oci_ubuntu_no_op",
    base = "@ubuntu_rules_oci",
    entrypoint = ["/fail"],
    tags = ["manual"],
)

image(
    name = "ubuntu_no_op",
    architecture = "amd64",
    base = "@ubuntu",
    layers = [],
    os = "linux",
)

oci_image(
    name = "oci_cuda_no_op",
    base = "@cuda_rules_oci",
    entrypoint = ["/fail"],
    tags = ["manual"],
)

image(
    name = "cuda_no_op",
    architecture = "amd64",
    base = "@cuda",
    layers = [],
    os = "linux",
)

layer(
    name = "img_layer",
    srcs = {"usr/bin/img": "@rules_img//cmd/img"},
)

layer(
    name = "my_layer",
    srcs = {
        "usr/bin/img": "@rules_img//cmd/img",
        "var/hello.txt": ":hello.txt",
        "var/log": ":log",
        "var/tree_a": ":tree",
        "var/tree_b": ":tree",
        "var/large_tree": ":large_tree",
    },
    symlinks = {
        "a": "b",
    },
)

layer_from_tar(
    name = "my_layer_from_tar",
    src = "@test_archive//file",
    compress = "gzip",
)

image(
    name = "my_image",
    base = "@ubuntu",
    layers = [
        ":img_layer",
        ":my_layer",
    ],
    os = "linux",
)

image(
    name = "my_second_image",
    architecture = "amd64",
    base = "@cuda",
    layers = [
        ":img_layer",
        ":my_layer",
    ],
    os = "linux",
)

index(
    name = "my_index",
    annotations = {"foo": "bar"},
    manifests = [":my_image"],
    platforms = [
        "//:linux_amd64",
        "//:linux_arm64",
    ],
)

image(
    name = "cc_image",
    base = ":my_index",
    layers = ["//examples/src/cc"],
)

index(
    name = "cc_index",
    manifests = [":cc_image"],
    platforms = [
        "//:linux_amd64",
        "//:linux_arm64",
    ],
)

image(
    name = "some_extra_image",
    base = "cc_index",
)

index(
    name = "some_extra_index",
    manifests = [":some_extra_image"],
    platforms = [
        "//:linux_amd64",
        "//:linux_arm64",
    ],
)

push(
    name = "my_push",
    image = ":some_extra_index",
    registry = "ghcr.io",
    repository = "malt3/ubuntu",
    tag = "latest",
)
